# fire-station

./: .clang-format  .gitignore  Alarms.hpp  Announcements.cpp  Announcements.hpp  Announcer.cpp  Announcer.hpp  CMakeLists.txt  Config.cpp  Config.h.in  Config.hpp  Controller.cpp  Controller.hpp  Format.hpp  Ipc.hpp  PushListener.cpp  PushListener.hpp  Sha256.cpp  Sha256.hpp  SpinQueue.hpp  TtsDispatcher.cpp  TtsDispatcher.hpp  main.cpp  process.cpp  process.hpp  simple_ng.c  simple_ng.h
.github/workflows/: build.yaml
cmake/: SOEM.cmake  cJSON.cmake  curl.cmake  disruptorplus.cmake  fmt.cmake
data/: fire-station  fire-station.service
deb/: conffiles
src/: Alarms.hpp  Announcements.cpp  Announcer.cpp  Announcer.hpp  Config.cpp  Config.hpp  Controller.cpp  Controller.hpp  Format.hpp  GeneralizedQueue.hpp  Ipc.hpp  PushListener.cpp  PushListener.hpp  RaiiHelpers.hpp  Sha256.cpp  TtsDispatcher.cpp  main.cpp  simple_ng_dummy.cpp
